fixing wrong padding-top on all titles of project

--- a/source/assets/stylesheets/locastyle/base/_typography.sass
+++ b/source/assets/stylesheets/locastyle/base/_typography.sass
@@ -14,7 +14,6 @@ h1, h2, h3, h4, h5, h6
 
   color: $gray-4
   margin-bottom: 5px
-  padding-top: 30px
 
 .ls-title-intro
   font-size: 2.25rem
